fix in css style: teaching level tag doenst wrap

--- a/src/assets/scss/components/document/_Document.scss
+++ b/src/assets/scss/components/document/_Document.scss
@@ -77,6 +77,7 @@
       margin-right: 5px;
       text-align: center;
       font-style:normal;
+      white-space: nowrap;
     }
 
     &__question-info-detail--green {
