--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -845,7 +845,8 @@ CSS for UserProfile
     margin-bottom: 10px;
     margin-right: 5px;
     text-align: center;
-    font-style: normal; }
+    font-style: normal;
+    white-space: nowrap; }
   .c-document__question-info-detail--green {
     background: #53BA65; }
   .c-document__question-info-detail--pink {
